--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			</ul>
 		</nav>
 	</header>
-	<section>section</section>
+	<section>section text/section>
 	<footer>
 		<a href="#">fb link</a>
 	</footer>
