--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
 			</ul>
 		</nav>
 	</header>
-	<section>section</section>
+	<section>
+		<div class="box">
+			<h1>სათაური</h1>
+		</div>
+	</section>
 	<footer>
 		<a href="#">fb link</a>
 	</footer>
