add display inline block

--- a/index.html
+++ b/index.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="style.css">
 	<meta charset="utf-8">
 	<title>github2</title>
 </head>
 <body>
 	<header>
+		<a href="#">logo</a>
 		<nav>
 			<ul>
-				<li>
+				<li class="navbar-li">
+					<a href="#"> მთავარი</a>
+				</li>
+				<li class="navbar-li">
+					<a href="#"> მთავარი</a>
+				</li>
+				<li class="navbar-li">
 					<a href="#"> მთავარი</a>
 				</li>
 			</ul>
@@ -17,6 +25,14 @@
 	<section>
 		<div class="box">
 			<h1>სათაური</h1>
+			<div>
+				<img class="image" src="image.png" alt="image">
+				<p class="text">approach that suggests that design and development should respond to the user's behavior and environment based on screen size, platform and orientation.</p>
+			</div>
+		</div>
+		<div class="box1">
+			<h1>სათაური</h1>
+			<p>დეტალური ტექსტ</p>
 		</div>
 	</section>
 	<footer>
